--- a/WorkingII/css/site.css
+++ b/WorkingII/css/site.css
@@ -274,3 +274,8 @@ color: rgb(255, 230, 153)
     top: 230px;
     left: 100px;
 }
+.thanksTXT{
+     position: absolute;
+    top: 230px;
+    left: 100px;
+}
